fixed wrap pagination

--- a/client/app/less/al-theme/medias.less
+++ b/client/app/less/al-theme/medias.less
@@ -36,7 +36,7 @@
         display: inline-block;
         width: 100%;
         .abx-pagination-left{
-            //width: auto;
+            width: auto;
             float: left;
         }
         .abx-pagination-center{
@@ -45,7 +45,7 @@
             display: inline-block;
         }
         .abx-pagination-right{
-            //width: auto;
+            width: auto;
             float: right;
         }
     }
